# cgol

./: .gitignore  .gitmodules  README.md
.github/workflows/: c_bats.yml  go.yml
data/: default  flier
src/c/: .gitignore  README.txt  cgol  expected.bats  main.c  meson.build
src/c/test/: test.bats
src/c/test/expected/test_out/: i10  i1024
src/go/: README.txt  go.mod  life_test.go  main.go
src/python/: cgol.py
src/rust/: Cargo.toml
src/rust/src/: main.rs
