[package]
name = "rust"
version = "0.1.0"
authors = ["Brett Holman <bpholman5@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1"
serde = {version = "1.0.126", features = ["derive"]}
serde_derive = "1.0.126"
